--- a/src/genlogic/view/GenlogicResultsView.fxml
+++ b/src/genlogic/view/GenlogicResultsView.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -9,13 +13,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="genlogic.view.GenlogicResultsViewController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="genlogic.view.GenlogicResultsViewController">
    <children>
       <MenuBar layoutY="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu fx:id="fileBtn" mnemonicParsing="false" text="File">
             <items>
-              <MenuItem fx:id="save" mnemonicParsing="false" onAction="#handleFileSaver" text="Save" />
+              <MenuItem fx:id="save" mnemonicParsing="false" onAction="#handleFileSaver" text="Save as" />
                   <MenuItem fx:id="closeApplicationBtn" mnemonicParsing="false" onAction="#handleCloseApplication" text="Close" />
             </items>
           </Menu>
